--- a/src/app/suggestions/suggestion/suggestion.component.html
+++ b/src/app/suggestions/suggestion/suggestion.component.html
@@ -1,7 +1,7 @@
 <div class="card text-center">
   <div class="card-body">
     <h2 class="card-title">{{item}}</h2>
-    <h6 class="card-subtitle mb-2 text-muted"><fa-icon [icon]="['fas', 'quote-right']"></fa-icon> {{name}} <fa-icon [icon]="['fas', 'quote-left']"></fa-icon></h6>
+    <h6 class="card-subtitle text-muted"><fa-icon [icon]="['fas', 'quote-right']"></fa-icon> {{name}} <fa-icon [icon]="['fas', 'quote-left']"></fa-icon></h6>
     <button type="button" class="btn btn-outline-primary btn-sm" (click)="next()">
       <fa-icon [icon]="['fas', 'forward']"></fa-icon>
     </button>
