--- a/src/app/suggestions/suggestions.component.html
+++ b/src/app/suggestions/suggestions.component.html
@@ -8,7 +8,7 @@
 <div class="row">
     <ng-container *ngIf="suggestions; else loading">
         <ng-container *ngFor="let suggestion of suggestions">
-            <div class="col-6">
+            <div class="col-md-12 col-lg-6">
                 <app-suggestion [name]="suggestion.name" [items]="suggestion.items"></app-suggestion>
             </div>
         </ng-container>
