--- a/src/app/suggestions/suggestion/suggestion.component.html
+++ b/src/app/suggestions/suggestion/suggestion.component.html
@@ -1,9 +1,13 @@
-<div class="card text-center">
+<div class="shadow p-3 mb-3 bg-white rounded">
   <div class="card-body">
-    <h2 class="card-title">{{item}}</h2>
-    <h6 class="card-subtitle text-muted"><fa-icon [icon]="['fas', 'quote-right']"></fa-icon> {{name}} <fa-icon [icon]="['fas', 'quote-left']"></fa-icon></h6>
-    <button type="button" class="btn btn-outline-primary btn-sm" (click)="next()">
-      <fa-icon [icon]="['fas', 'forward']"></fa-icon>
-    </button>
+    <h2 class="card-title text-center">{{item}}</h2>
+    <h6 class="card-subtitle text-muted text-center">
+      <fa-icon [icon]="['fas', 'quote-right']"></fa-icon> {{name}} <fa-icon [icon]="['fas', 'quote-left']"></fa-icon>
+    </h6>
+    <div class="text-right">
+      <button type="button" class="btn btn-outline-primary btn-sm" (click)="next()">
+        <fa-icon [icon]="['fas', 'forward']"></fa-icon>
+      </button>
+    </div>
   </div>
 </div>
