--- a/src/app/suggestions/suggestions.component.html
+++ b/src/app/suggestions/suggestions.component.html
@@ -5,7 +5,7 @@
     </button>
 </nav>
 
-<div class="row">
+<div class="row pt-2">
     <ng-container *ngIf="suggestions; else loading">
         <ng-container *ngFor="let suggestion of suggestions">
             <div class="col-md-12 col-lg-6">
