--- a/src/app/suggestions/suggestion/suggestion.component.html
+++ b/src/app/suggestions/suggestion/suggestion.component.html
@@ -1,6 +1,6 @@
 <div class="shadow p-3 mb-3 bg-white rounded">
   <div class="card-body">
-    <h2 class="card-title text-center">{{item}}</h2>
+    <h2 class="card-title text-center text-truncate">{{item}}</h2>
     <h6 class="card-subtitle text-muted text-center">
       <fa-icon [icon]="['fas', 'quote-right']"></fa-icon> {{name}} <fa-icon [icon]="['fas', 'quote-left']"></fa-icon>
     </h6>
